--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="top-container">
       <img class="top-cloud" src="images/cloud.png" alt="cloud-image">
       <h1>I'm Mathew</h1>
-      <h2 class="tagline">A Web Developer</h2>
+      <h2 class="tagline">A Tech Enthusiast</h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">
       <img src="images/mountain.png" alt="cloud-images">
     </div>
@@ -19,7 +19,7 @@
       <div class="profile">
         <img src="images/matcircle.png" alt="mat-profile-image">
         <h2>Nice to Meet You.</h2>
-        <p class="meet-you-text">I am a web designer, developer and straight up geek with a passion for all things nerdy.</p>
+        <p class="meet-you-text">I am a tech enthusiast, self taught developer and straight up geek with a passion for all things nerdy.</p>
       </div>
       <hr>
       <div class="skills">
@@ -27,28 +27,28 @@
         <div class="skill-row">
           <img class="code-image" src="images/badge-web.gif" alt="Web-development-image">
           <h3>Application and Web Design/Development</h3>
-          <p>I began learning to code in my teens because I wanted to get through the boring parts of video games without physically being there and since then have developed a wealth of skills relating to building and designing websites and software applications. I am proficient in HTML, CSS, Javascript, PHP, Python and QBasic. I can build websites either through custom coding or through Wordpress infrastructure and I am experienced with the Divi Page Builder.</p>
+          <p>I began learning to code as a hobby in my teens, it took a backseat through most of employment until I ended up in a sales role at a company with limited tech infrastructure. The company was in a situation where it needed CRM and Workflow Management software but didn't really have the budge to spend on building it. I was given some free reign and developed in house CRM software with workflow management functionality and managed to significantly increase the sales conversion rate of all staff using the application within 6 months of implementing it. I had commenced moving the software over to a web based infrastructure when the company was sold and my application was no longer required. I've since developed a number of websites and passion python projects to keep my programming knowledge sharp.</p>
         </div>
         <div class="skill-row">
           <img class="customer-service-image" src="images/customer-service.png" alt="customer-service-image">
           <h3>Customer Service</h3>
-          <p>After many years working in the hospitality industry my commitment to customer service is second to none. It is super important to me to make sure that my customers are happy before, during and after I complete any work for them.</p>
+          <p>Coming from a Hospitality and Sales background I have some degree of expertise in prioritizing customer experience. Every role in some way has an element of sales and customer service somewhere in the chain, where the value add that any role brings to the business funcionality depends on the perceived value it provides to a customer. So I firmly believe it is always important to think in terms of users, even if what you are doing appears to be a background concern.</p>
         </div>
       </div>
       <hr>
       <div class="contact-me">
         <h2>Get In Touch</h2>
-        <h3>No job is too big or too small, if you need a website built, maintained or fixed please get in touch.</h3>
-        <p>You can either reach me via email through the "Contact Me" button below or follow the Indev Solutions Link to my business page and reach me there.</p>
+<!--         <h3>No job is too big or too small, if you need a website built, maintained or fixed please get in touch.</h3> -->
+        <p>You can either reach me via email through the "Contact Me" button below.</p>
         <a class="btn" href="mailto:mat@indevsolutions.com.au">CONTACT ME</a>
       </div>
     </div>
 
 
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.facebook.com/mathew.borg">Facebook</a>
+<!--       <a class="footer-link" href="https://www.facebook.com/mathew.borg">Facebook</a> -->
       <a class="footer-link" href="https://indevsolutions.github.io/matborg-cv/">My CV</a>
-      <a class="footer-link" href="https://www.indevsolutions.com.au">Indev Solutions</a>
+<!--       <a class="footer-link" href="https://www.indevsolutions.com.au">Indev Solutions</a> -->
       <p class="copyr">© 2020 Mathew Borg.</p>
     </div>
 
